--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,26 @@
         (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
       <br><br>
       <ul class="list-group">
-        <li
-          class="list-group-item"
-          
-        >
-        </li>
+        <div *ngIf="onlyOdd">
+          <li
+                  class="list-group-item"
+                  *ngFor="let odd of oddNumbers"
+                  [ngClass]="{odd: odd % 2 !== 0}"
+                  [ngStyle]="{backgroundColor: odd % 2 !== 0 ? '#FFFF00' : '#FF00FF'}"
+          >
+            {{ odd }}
+          </li>
+        </div>
+        <div *ngIf="!onlyOdd">
+          <li
+                  class="list-group-item"
+                  *ngFor="let even of evenNumbers"
+                  [ngClass]="{odd: even % 2 !== 0}"
+                  [ngStyle]="{backgroundColor: even % 2 !== 0 ? '#FFFF00' : '#FF00FF'}"
+          >
+            {{ even }}
+          </li>
+        </div>
       </ul>
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
