--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,9 @@
           </li>
         </div>
       </ul>
+
+      <p appBasicHighlight>Style me with basic directive</p>
+
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
       </ng-template>
