--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,13 @@
       <p appBasicHighlight>Style me with basic directive</p>
       <p appBetterHighlight [highlightColor]="'#336699'" [defaultColor]="'#FF9900'">Style me with better directive</p>
 
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">Value is 5</p>
+        <p *ngSwitchCase="10">Value is 10</p>
+        <p *ngSwitchCase="100">Value is 100</p>
+        <p *ngSwitchDefault>Value is default</p>
+      </div>
+
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
       </ng-template>
